# repro-cargo-bazel-lock-issue

./: Cargo.toml  WORKSPACE.bazel  cargo-bazel-lock.json  cargo-bazel-lock.linux.json  cargo-bazel-lock.macos.json
